--- a/dvach-browser/ru.lproj/Localizable.strings
+++ b/dvach-browser/ru.lproj/Localizable.strings
@@ -11,6 +11,13 @@
 "BUTTON_REPORT" = "Пожаловаться";
 "BUTTON_CLOSE" = "Закрыть";
 "BUTTON_SEND" = "Отправить";
+"BUTTON_ACCEPT" = "Принять";
+
+"BOARD_CATEGORY_FAVOURITE" = "Избранное";
+"BOARD_CATEGORY_THEMED" = "Тематика";
+"BOARD_CATEGORY_CREATION" = "Творчество";
+"BOARD_CATEGORY_TECH" = "Техника и софт";
+"BOARD_CATEGORY_GAMES" = "Игры";
 
 "ERROR" = "Ошибка";
 
@@ -45,5 +52,7 @@
 
 "POST_STATUS_SUCCESS" = "Успешно";
 
+"TITLE_BOARDS" = "Доски";
 "TITLE_NEW_THREAD" = "Новый тред";
 "TITLE_ANSWERS_TO" = "Ответы к";
+"TITLE_AGREEMENT" = "Соглашение";
