Back to PM domain again. New localization for a Create post VC.

--- a/dvach-browser/en.lproj/Localizable.strings
+++ b/dvach-browser/en.lproj/Localizable.strings
@@ -53,5 +53,6 @@
 
 "TITLE_BOARDS" = "Boards";
 "TITLE_NEW_THREAD" = "New thread";
+"TITLE_NEW_POST" = "New post";
 "TITLE_ANSWERS_TO" = "Answers to";
 "TITLE_AGREEMENT" = "Agreement";
