--- a/dvach-browser/ru.lproj/Localizable.strings
+++ b/dvach-browser/ru.lproj/Localizable.strings
@@ -53,5 +53,6 @@
 
 "TITLE_BOARDS" = "Доски";
 "TITLE_NEW_THREAD" = "Новый тред";
+"TITLE_NEW_POST" = "Создать пост";
 "TITLE_ANSWERS_TO" = "Ответы к";
 "TITLE_AGREEMENT" = "Соглашение";
