Resolve cloudflare problems (except MWPhoto cloud problem)

--- a/dvach-browser/en.lproj/Localizable.strings
+++ b/dvach-browser/en.lproj/Localizable.strings
@@ -57,3 +57,4 @@
 "TITLE_NEW_POST" = "New post";
 "TITLE_ANSWERS_TO" = "Answers to";
 "TITLE_AGREEMENT" = "Agreement";
+"TITLE_DDOS_CHECK" = "DDoS checking";
