--- a/dvach-browser/ru.lproj/Localizable.strings
+++ b/dvach-browser/ru.lproj/Localizable.strings
@@ -57,3 +57,4 @@
 "TITLE_NEW_POST" = "Создать пост";
 "TITLE_ANSWERS_TO" = "Ответы к";
 "TITLE_AGREEMENT" = "Соглашение";
+"TITLE_DDOS_CHECK" = "Прохождение проверки";
