Bookmark thread feature and code readability

--- a/dvach-browser/en.lproj/Localizable.strings
+++ b/dvach-browser/en.lproj/Localizable.strings
@@ -39,6 +39,7 @@
 "PROMPT_INSTALL_VLC" = "Install VLC to play webm";
 "PROMPT_REPORT_SENT" = "Report sent";
 "PROMPT_NEW_MESSAGES" = "new";
+"PROMPT_THREAD_BOOKMARKED" = "Thread added to the main app screen";
 
 "ACTIVITY_OPEN_IN_CHROME" = "Open in Chrome";
 
