--- a/dvach-browser/en.lproj/Localizable.strings
+++ b/dvach-browser/en.lproj/Localizable.strings
@@ -33,7 +33,9 @@
 "ALERT_BOARD_CODE_MESSAGE" = "Enter board code without slashes";
 "ALERT_SETTINGS_CHANGED_TITLE" = "Settings changed";
 "ALERT_SETTINGS_CHANGED_MESSAGE" = "New settings will apply after app restart.";
-"ALERT_BAD_BOARD_TITLE" = "This board is not permitted in mobile app";
+"ALERT_AGE_CHECK_TITLE" = "Need verification";
+"ALERT_AGE_CHECK_MESSAGE" = "Full features is for 18+ only. Please, confirm you are 18+ years old.";
+"ALERT_AGE_CHECK_CONFIRM" = "Confirm";
 "ALERT_CHANGE_FAVOURITE_TITLE" = "Change title in the list";
 
 "DATE_FORMATTER_DAYS" = "%ld d";
