--- a/dvach-browser/ru.lproj/Localizable.strings
+++ b/dvach-browser/ru.lproj/Localizable.strings
@@ -6,6 +6,8 @@
   Copyright (c) 2015 8of. All rights reserved.
 */
 
+"DEPRECATED" = "Выпилино";
+
 "BUTTON_OK" = "ОК";
 "BUTTON_CANCEL" = "Отмена";
 "BUTTON_REPORT" = "Пожаловаться";
