--- a/dvach-browser/ru.lproj/Localizable.strings
+++ b/dvach-browser/ru.lproj/Localizable.strings
@@ -2,7 +2,7 @@
   Localizable.strings
   dvach-browser
 
-  Created by Andrey Konstantinov on 28/08/15.
+  Created by Andy on 28/08/15.
   Copyright (c) 2015 8of. All rights reserved.
 */
 
